# Symphonia

symphonia/: Cargo.toml
symphonia-codec-aac/: Cargo.toml
symphonia-codec-aac/src/: aac.rs  adts.rs
symphonia-core/: Cargo.toml
symphonia-core/src/: codecs.rs  formats.rs  probe.rs
symphonia-core/src/io/: bit.rs  buf_stream.rs  media_source_stream.rs  mod.rs  monitor_stream.rs  scoped_stream.rs
