[package]
authors = ["Philip Deljanov <philip.deljanov@gmail.com>", "Kostya Shishkov <kostya.shiskov@gmail.com>"]
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
description = "Pure Rust AAC decoder (a part of project Symphonia)."
edition = "2018"
exclude = ["scripts/*"]
homepage = "https://github.com/pdeljanov/Symphonia"
keywords = ["audio", "codec", "decoder", "aac", "m4a"]
license = "MPL-2.0"
name = "symphonia-codec-aac"
readme = "README.md"
repository = "https://github.com/pdeljanov/Symphonia"
version = "0.2.0"

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
symphonia-core = {version = "0.2", path = "../symphonia-core"}
maybe-async = "0.2"
async-trait = "0.1"

[features]
is_sync = ["symphonia-core/is_sync"]
